package com.scribehealth.model;
public enum Role {
    DOCTOR,
    ADMIN
}
